--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,22 @@ compile_commands.json
 CTestTestfile.cmake
 _deps
 CMakeUserPresets.json
+build/
+
+# Ignore Code Editor Files
+.vscode
+.idea
+.idx
+*.tmp
+
+# Ignore Unwanted Directories
+.*/
+
+# Compiled Files
+*.o
+*.obj
+*.a
+*.so*
 
 # CLion
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
