Added QT Files Ignore

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,10 @@ build/
 *.a
 *.so*
 
+# Qt Files
+*.ui
+*.moc
+
 # CLion
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
